test/scc/decl/semantic-errors/080.t
void test()
{
    int (*a)() _Stdcall;
    int (*b)();

    a = b;
}